# pay-micro

./: Makefile  README.md  docker-compose.yml
auth_service/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml
auth_service/auth_service/: asgi.py  settings.py  urls.py  wsgi.py
auth_service/shared/message_queue/: base.py  producers.py
auth_service/user/: apps.py  serializers.py  signals.py  tests.py  urls.py  views.py
auth_service/user/migrations/: 0001_initial.py
notification_service/: .env.example  .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml
notification_service/notification/: apps.py  tasks.py  tests.py  urls.py  views.py
notification_service/notification_service/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
notification_service/shared/message_queue/: base.py  client.py  consumers.py
notification_service/user/: apps.py
notification_service/user/management/commands/: user_consumer.py
notification_service/user/migrations/: 0001_initial.py
